2004-11-07  Larry Jones  <lawrence.jones@ugs.com>

	* sanity.sh: Remove trailing / from cp -r commands.

2004-11-04 Derek Price <derek@ximbiot.com>

	* gssapi-client.c (connect_to_gserver): Silence gcc -Wall.

2004-11-04 Derek Price <derek@ximbiot.com>

	* sanity.sh (set_bad_tool): Remove unnecessary quotes.

2004-11-04 Derek Price <derek@ximbiot.com>

	* sanity.sh: s/depends_on_/require/.

2004-11-04 Derek Price <derek@ximbiot.com>

	* sanity.sh (find_tool): Eliminate variable with single reference.

2004-11-04  Mark D. Baushke  <mdb@juniper.net>

	* sanity.sh (SEARCHPATH): Unify the PATHs that are to be searched.
	(Which,find_tool): Use SEARCHPATH.
	(LS): Use default $SEARCHPATH for Which.
	(depend_on_rsync): Use default $SEARCHPATH for Which.

2004-11-04  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): Do not echo rsync information to
	stdout. Look for rsync in more directories.

2004-11-04 Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_rsync): Minor simplifications.  Make sure that
	an rsync that doesn't understand `--version' sends its error message to
	the log file too.

2004-11-04  Mark D. Baushke  <mdb@cvshome.org>
	
	* sanity.sh (set_bad_tool, is_bad_tool): Avoid printing errors
	about the same tool multiple times.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): Deal with missing rsync.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): Include rsync version information
	in output.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): More rigorous tests for rsync
	2.3.1 problems with --delete --include dir --exclude '*/.

2004-11-03 Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_rsync): Verify that `rsync --delete' actually
	does what it is supposed ot do.

2004-11-03 Derek Price <derek@ximbiot.com>

	* subr.c (Xreadlink): Remove MAXSIZE macro.  Minor reformatting.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>
